[package]
name = "soroban-gas-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
escrow = { path = "../contracts/escrow" }
htlc = { path = "../contracts/htlc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
